fix:accept and cancel buttons gap

--- a/Delivery-frontend/src/features/addOrder/index.module.css
+++ b/Delivery-frontend/src/features/addOrder/index.module.css
@@ -27,7 +27,7 @@
 
 .buttonsContainer{
         display: flex;
-        justify-content: center;
+        justify-content: space-around;
         align-items: center;
         margin-top: 10px;
 }
